changes in task creational form

--- a/main_site/templates/main_site/actions/add.html
+++ b/main_site/templates/main_site/actions/add.html
@@ -19,7 +19,7 @@
             <div class="card m-2 border-left-danger">
                 <div class="card-body">
                     Отсутствует ключ доступа к Coggle.it
-                    <a href="{% url 'coggle_auth' %}" class="btn btn-primary btn-icon-split ml-2">
+                    <a href="{% url 'coggle_auth' %}" target="_blank" class="btn btn-primary btn-icon-split ml-2">
                         <span class="text">Получить ключ</span>
                     </a>
                 </div>
@@ -29,7 +29,7 @@
                 <div class="card m-2  border-left-danger">
                 <div class="card-body">
                     Отсутствует ключ доступа к Miro.com
-                    <a href="{% url 'miro_auth' %}" class="btn btn-primary btn-icon-split ml-2">
+                    <a href="{% url 'miro_auth' %}" target="_blank" class="btn btn-primary btn-icon-split ml-2">
                         <span class="text">Получить ключ</span>
                     </a>
                 </div>
