--- a/main_site/templates/main_site/base.html
+++ b/main_site/templates/main_site/base.html
@@ -88,8 +88,8 @@
         <div id="collapseTokens" class="collapse" aria-labelledby="headingTokens" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Операции:</h6>
-            <a class="collapse-item" href="{% url 'coggle_auth' %}">Обновить для Coggle</a>
-            <a class="collapse-item" href="{% url 'miro_auth' %}">Обновить для Miro</a>
+            <a class="collapse-item" href="{% url 'coggle_auth' %}" target="_blank">Обновить для Coggle</a>
+            <a class="collapse-item" href="{% url 'miro_auth' %}" target="_blank">Обновить для Miro</a>
           </div>
         </div>
       </li>
